fixing some typos

--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -390,7 +390,7 @@ pdfproducer={LaTeX with hyperref and classicthesis}
 %----------------------------------------------------------------------------------------
 
 %\usepackage[oldstylenums,notextcomp,lighttext]{kpfonts} % oldstyle notextcomp
-\usepackage[osf]{libertine}
+\usepackage[osf,tt=false]{libertine}
 %\usepackage[light,condensed,math]{iwona}
 %\renewcommand{\sfdefault}{iwona}
 %\usepackage{lmodern} % <-- no osf support :-(
