fixing missing supervisor and location

--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -46,7 +46,7 @@
 \newcommand{\myFaculty}{Facultad de Ciencias\xspace}
 \newcommand{\myDepartment}{Posgrado de Física Fundamental\xspace}
 \newcommand{\myUni}{Universidad de Los Andes\xspace}
-\newcommand{\myLocation}{Mérida, Venezuela\xspace}
+\newcommand{\myLocation}{Centro de Investigaciones de Astronomía (CIDA), Mérida, Venezuela\xspace}
 \newcommand{\myTime}{\today\xspace}
 \newcommand{\myVersion}{{\color{RedOrange} \textsc{Borrador 1.0}}\xspace}
 
