--- a/front-back-matter/title-back.tex
+++ b/front-back-matter/title-back.tex
@@ -11,10 +11,10 @@
 
 \bigskip
 
-%\noindent\spacedlowsmallcaps{Supervisors}: \\
+\noindent\spacedlowsmallcaps{Supervisor}: \\
 %\myProf \\
 %\myOtherProf \\
-%\mySupervisor
+\mySupervisor
 
 %\medskip \\
 
